SigmaCodebackup3rdSep/objects/Order_Payment_Relation__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Recevied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Recevied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Payment Relations</relationshipLabel>
        <relationshipName>Order_Payment_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Order Payment Relations</relationshipLabel>
        <relationshipName>Order_Payment_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Order Payment Relations</relationshipLabel>
        <relationshipName>Order_Payment_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Payment Relation</label>
    <nameField>
        <displayFormat>OPR -{0000}</displayFormat>
        <label>Order Payment Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Payment Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>